Revert "Fix action buttons to top even when headers become two lines on mobile"
This reverts commit 13723fd5af8c2a56296f6f536679c5babddc050f.

--- a/client/components/navigation-header/style.scss
+++ b/client/components/navigation-header/style.scss
@@ -43,7 +43,7 @@
 .navigation-header__main {
 	display: flex;
 	justify-content: space-between;
-	align-items: flex-start;
+	align-items: center;
 	box-sizing: border-box;
 
 	@media ( max-width: 660px ) {
